// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse must match the diff snapshot between Expand vs Collapse Props 1`] = `
Snapshot Diff:
- First value
+ Second value

  <CollapseWrapperStyle>
    <CollapseTriggerStyle
-     aria-expanded={true}
-     aria-label="common.shrink_collapse"
+     aria-expanded={false}
+     aria-label="common.expand_collapse"
      onClick={[Function toggleCollapse]}
    >
      foo
      <CollapseIconStyle
        aria-hidden={true}
-       iscollapsed={false}
+       iscollapsed={true}
      >
        <SvgAngleArrowRight />
      </CollapseIconStyle>
    </CollapseTriggerStyle>
    <CollapseSeparatorStyle />
    <CollapseContentStyle
-     aria-hidden={false}
-     iscollapsed={false}
+     aria-hidden={true}
+     iscollapsed={true}
    >
      bar
    </CollapseContentStyle>
  </CollapseWrapperStyle>
`;

exports[`Collapse must match the snapshot with default Props 1`] = `
<CollapseWrapperStyle>
  <CollapseTriggerStyle
    aria-expanded={false}
    aria-label="common.expand_collapse"
    onClick={[Function]}
  >
    foo
    <CollapseIconStyle
      aria-hidden={true}
      iscollapsed={true}
    >
      <SvgAngleArrowRight />
    </CollapseIconStyle>
  </CollapseTriggerStyle>
  <CollapseSeparatorStyle />
  <CollapseContentStyle
    aria-hidden={true}
    iscollapsed={true}
  >
    bar
  </CollapseContentStyle>
</CollapseWrapperStyle>
`;
